# uavs2d

./: .gitignore  CMakeLists.txt  glut.h  utest.c
build-android/jni/: Android.mk  Application.mk  android-ndk-profiler.mk
docs/: readme.txt
source/: CMakeLists.txt
source/decoder/: AEC.c  AEC.h  DecAdaptiveLoopFilter.c  DecAdaptiveLoopFilter.h  block.c  block.h  codingUnit.c  codingUnit.h  global.h  header.c  header.h  image.c  loopfilter.c  uavs2d.c  uavs2d.h  water_mark.c  wquant.c  wquant.h
source/decore/: ComAdaptiveLoopFilter.c  ComAdaptiveLoopFilter.h  biaridecod.c  biaridecod.h  bitstream.c  bitstream.h  block_info.c  block_info.h  common.c  common.h  commonStructures.h  commonVariables.h  common_tables.c  defines.h  headers.h  inter-prediction.c  inter-prediction.h  intra-prediction.c  intra-prediction.h  loop-filter.c  loop-filter.h  pixel.c  threadpool.c  threadpool.h  transform.c  transform.h  win32thread.c  win32thread.h
source/decore/neon/: android.c  android.h  android_alf.s  android_deblock.s  android_idct.s  android_inter_pred.s  android_intra_pred.s  android_pixel.s  android_sao.c  android_sao.h  android_sao_neon.s  asm.S
source/decore/x86/: intrinsic.c  intrinsic.h  intrinsic_alf.c  intrinsic_dct.c  intrinsic_deblock.c  intrinsic_inter_pred.c  intrinsic_intra-pred.c  intrinsic_pixel.c  intrinsic_sao.c
source/decore/x86_256/: intrinsic_256.c  intrinsic_256.h  intrinsic_alf_256.c  intrinsic_dct_256.c  intrinsic_deblock_256.c  intrinsic_inter-pred_256.c  intrinsic_intra_pred_256.c  intrinsic_pixel_256.c  intrinsic_sao_256.c
